@@ -172,6 +172,7 @@ $lang = [
     'system_view' => 'System View',
     'themes' => 'Template Manager',
     'theaters' => 'In Theaters',
+    'tickets' => 'Buy Tickets',
     'today' => 'Today',
     'top100' => 'IMDb Top 100 Movies',
     'top_countries' => 'View Countries',
@@ -193,6 +194,7 @@ $lang = [
     'view_my_posts' => 'View My Posts',
     'view_message' => 'View Message',
     'view_peers' => 'View Peers',
+    'view_tickets' => 'View Tickets',
     'view_topic' => 'View Topic',
     'view_unread_posts' => 'View Unread Forum Posts',
     'warn' => 'View Warnings',
